--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "WETTDbConnection": "Server=tcp:wett-dev-db.database.windows.net;Authentication=Active Directory Default;Database=WETT_TEST;"
+  },
   "AllowedHosts": "*"
 }
