--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "ConnectionStrings": {
-    "WETTDbConnection": "Server=tcp:wett-dev-db.database.windows.net;Authentication=Active Directory Default;Database=WETT_DEV;"
-  },
-  "AllowedHosts": "*"
+	"AzureAd": {
+		"Instance": "https://login.microsoftonline.com/",
+		"Domain": "wett-dev.azurewebsites.net",
+		"TenantId": "c8560bf9-590a-4626-a007-41b4d8302dd0",
+		"ClientId": "6e031667-4a3b-44e1-9241-74adb94390dd"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+	"ConnectionStrings": {
+		"WETTDbConnection": "Server=tcp:wett-dev-db.database.windows.net;Authentication=Active Directory Default;Database=WETT_DEV;"
+	},
+	"AllowedHosts": "*"
 }
