--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
 	"AzureAd": {
 		"Instance": "https://login.microsoftonline.com/",
-		"Domain": "wett-dev.azurewebsites.net",
+		"Domain": "paramountcomputersolutions.onmicrosoft.com",
 		"TenantId": "c8560bf9-590a-4626-a007-41b4d8302dd0",
 		"ClientId": "6e031667-4a3b-44e1-9241-74adb94390dd"
 	},
