Updated Supplier, Product tables, regen EF context.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,10 @@
 		"TenantId": "c8560bf9-590a-4626-a007-41b4d8302dd0",
 		"ClientId": "6e031667-4a3b-44e1-9241-74adb94390dd"
 	},
+	"Groups": {
+		"wett_user": "Enter the objectID for GroupAdmin group copied from Azure Portal",
+		"GroupMember": "Enter the objectID for GroupMember group copied from Azure Portal"
+	},
 	"Logging": {
 		"LogLevel": {
 			"Default": "Information",
