--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,9 @@
 		"Instance": "https://login.microsoftonline.com/",
 		"Domain": "paramountcomputersolutions.onmicrosoft.com",
 		"TenantId": "c8560bf9-590a-4626-a007-41b4d8302dd0",
-		"ClientId": "6e031667-4a3b-44e1-9241-74adb94390dd"
+		"ClientId": "6e031667-4a3b-44e1-9241-74adb94390dd",
+		"CallbackPath": "/signin-oidc",
+		"SignedOutCallbackPath ": "/signout-callback-oidc"
 	},
 	"Groups": {
 		"wett_user": "Enter the objectID for GroupAdmin group copied from Azure Portal",
