--- a/appsettings.json
+++ b/appsettings.json
@@ -19,8 +19,7 @@
 		}
 	},
 	"ConnectionStrings": {
-		//"WETTDbConnection": "Server=tcp:wett-dev-db.database.windows.net;Authentication=Active Directory Default;Database=WETT_DEV;",
-		"WETTDbConnection": "Server=tcp:wett-dev-db.database.windows.net,1433;Initial Catalog=WETT_DEV;Persist Security Info=False;User ID=wettdev;Password=WettD3vSql!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+		"WETTDbConnection": "Server=tcp:wett-dev-db.database.windows.net;Authentication=Active Directory Default;Database=WETT_DEV;",
 
 	},
 	"AllowedHosts": "*"
