--- a/appsettings.json
+++ b/appsettings.json
@@ -19,7 +19,7 @@
 		}
 	},
 	"ConnectionStrings": {
-		"WETTDbConnection": "Server=tcp:wett-dev-db.database.windows.net;Authentication=Active Directory Default;Database=WETT_DEV;",
+		"WETTDbConnection": "Server=tcp:wett-dev-db.database.windows.net;Authentication=Active Directory Default;Database=WETT_DEV;"
 
 	},
 	"AllowedHosts": "*"
