--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,7 @@
 		"SignedOutCallbackPath ": "/signout-callback-oidc"
 	},
 	"Groups": {
-		"wett_user": "Enter the objectID for GroupAdmin group copied from Azure Portal",
-		"GroupMember": "Enter the objectID for GroupMember group copied from Azure Portal"
+		"wett_user": "e6b52d23-02e3-4a07-9e52-206faf0ae99d",
 	},
 	"Logging": {
 		"LogLevel": {
