--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,12 @@
 		"CallbackPath": "/signin-oidc",
 		"SignedOutCallbackPath ": "/signout-callback-oidc"
 	},
+	"GraphAPI": {
+		"BaseUrl": "https://graph.microsoft.com/v1.0",
+		"Scopes": "User.Read GroupMember.Read.All"
+	},
 	"Groups": {
-		"wett_user": "e6b52d23-02e3-4a07-9e52-206faf0ae99d",
+		"wett_user": "e6b52d23-02e3-4a07-9e52-206faf0ae99d"
 	},
 	"Logging": {
 		"LogLevel": {
@@ -19,5 +23,6 @@
 	},
 	"ConnectionStrings": {
 	},
-	"AllowedHosts": "*"
+	"AllowedHosts": "*",
+	"GraphApiUrl": "https://graph.microsoft.com/v1.0"
 }
