Revert Startup.cs

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,10 +7,6 @@
 		"CallbackPath": "/signin-oidc",
 		"SignedOutCallbackPath ": "/signout-callback-oidc"
 	},
-	"GraphAPI": {
-		"BaseUrl": "https://graph.microsoft.com/v1.0",
-		"Scopes": "User.Read GroupMember.Read.All"
-	},
 	"Groups": {
 		"wett_user": "e6b52d23-02e3-4a07-9e52-206faf0ae99d"
 	},
@@ -23,6 +19,5 @@
 	},
 	"ConnectionStrings": {
 	},
-	"AllowedHosts": "*",
-	"GraphApiUrl": "https://graph.microsoft.com/v1.0"
+	"AllowedHosts": "*"
 }
