--- a/WETT.csproj
+++ b/WETT.csproj
@@ -30,6 +30,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	<PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.19" />
+	<PackageReference Include="Telerik.Reporting.OpenXmlRendering.Trial" Version="16.1.22.511" />
+	<PackageReference Include="Telerik.Reporting.Services.AspNetCore.Trial" Version="16.1.22.511" />
   </ItemGroup>
 
   <ItemGroup>
