Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_wett-dev.yml
+++ b/.github/workflows/master_wett-dev.yml
@@ -19,14 +19,14 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '7.0.103'
+          dotnet-version: '7.x'
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build --configuration Debug
+        run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Debug -o ${{env.DOTNET_ROOT}}
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -53,5 +53,5 @@ jobs:
         with:
           app-name: 'wett-dev'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_378810A3188B490EB43409C05769FA5C }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F2AE6547981F4BD78E32F8ACE0333897 }}
           package: .
