--- a/.github/workflows/Deploy-prod-test.yml
+++ b/.github/workflows/Deploy-prod-test.yml
@@ -22,7 +22,7 @@ name: Build and deploy to PROD
 env:
   AZURE_WEBAPP_NAME: your-app-name    # set this to the name of your Azure Web App
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
-  DOTNET_VERSION: '5'                 # set this to the .NET Core version to use
+  DOTNET_VERSION: '7'                 # set this to the .NET Core version to use
 
 on:
   workflow_dispatch:
@@ -41,10 +41,10 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '7.0.103'
-          include-prerelease: true
+          include-prerelease: false
 
       - name: Build with dotnet
-        run: dotnet build --configuration Debug
+        run: dotnet build --configuration Production
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
@@ -73,6 +73,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'wett'
-          slot-name: 'Production'
+          slot-name: 'Stage'
           publish-profile: ${{ secrets.PROD_AZURE_WEBAPP_PUBLISH_PROFILE }}
 
