--- a/.github/workflows/Deploy-prod-test.yml
+++ b/.github/workflows/Deploy-prod-test.yml
@@ -44,7 +44,7 @@ jobs:
           include-prerelease: false
 
       - name: Build with dotnet
-        run: dotnet build --configuration Production
+        run: dotnet build --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
