cannabis order entry -added validation on customer -added received date to search -adding shipped date to search header -limiting header depending on order status

--- a/WETT.csproj
+++ b/WETT.csproj
@@ -47,6 +47,7 @@
 
   <ItemGroup>
     <Folder Include="Services\" />
+    <Folder Include="Views\CustomerOrder\" />
   </ItemGroup>
 
   <ItemGroup>
