Fix copy attrib on new report

--- a/WETT.csproj
+++ b/WETT.csproj
@@ -63,6 +63,9 @@
     <None Update="Reports\SupplierReport.trdp">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Reports\SupplierReportSingle.trdp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
